# virl2-client

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: main.yml
docs/: Makefile
docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst  virl2_client.models.rst  virl2_client.rst
docs/source/api/: virl2_client.models.rst  virl2_client.rst
docs/template/: module.rst_t  package.rst_t
examples/: demo.ipynb  licensing.py  link_conditioning.py  sample.py
tests/: conftest.py  requirements.txt  test_auth.py  test_client_library.py  test_client_library_integration.py  test_client_library_labs.py  test_configuration.py  test_connect.py  test_credentials.py  test_cycle.py  test_definitions.py  test_group_api.py  test_image_upload.py  test_import_export_topology.py  test_lab.py  test_licensing.py  test_link_conditioning.py  test_links_on_various_slots.py  test_rate_limit.py  test_system_lab_repositories.py
tests/integration/: conftest.py  test_definitions.py  test_groups.py  test_import_export_topology.py  test_labs.py  test_licensing.py  test_node_image_definitions.py  test_server.py  test_users.py
tests/integration/test_data/: mixed-0.0.1.yaml  mixed-0.0.4.yaml  mixed-0.1.0.yaml  mixed.virl
tests/test_data/: labs.json  layer3_addresses-863799a0-3d09-4af4-be26-cad997b6ab27.json  mixed-0.0.1.yaml  mixed-0.0.4.yaml  mixed-0.0.5.yaml  populate_lab_tiles.json  sample_topology.json  simulation_stats-444a78d1-575c-4746-8469-696e580f17b6.json  simulation_stats-863799a0-3d09-4af4-be26-cad997b6ab27.json  topology-3031b614-0e76-4450-9fe0-6b3be0bc0bd2.json  topology-444a78d1-575c-4746-8469-696e580f17b6.json  topology-863799a0-3d09-4af4-be26-cad997b6ab27.json  topology-df76a038-076f-4744-85c0-b2e1daf1bc06.json
virl2_client/: __init__.py  event_handling.py  event_listening.py  exceptions.py  utils.py  virl2_client.py
virl2_client/models/: __init__.py  annotation.py  auth_management.py  authentication.py  bulk.py  cl_pyats.py  configuration.py  group.py  groups.py  interface.py  lab.py  lab_repository.py  ldap.py  licensing.py  link.py  node.py  node_image_definition.py  node_image_definitions.py  resource_pool.py  resource_pools.py  smart_annotation.py  system.py  user.py  users.py
