[tool.poetry]
name = "virl2_client"
version = "2.9.0"
description = "VIRL2 Client Library"
authors = ["Simon Knight <simknigh@cisco.com>", "Ralph Schmieder <rschmied@cisco.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ciscodevnet/virl2-client"
repository = "https://github.com/ciscodevnet/virl2-client"
include = ["examples/*"]
exclude = ["tests/**/*"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

[tool.poetry.dependencies]
# cryptography requires python>=3.9.2
python = "^3.9.2"
httpx = "^0.28.1"

# https://github.com/python-poetry/poetry/pull/606 -- no support for optional dev-deps
# optional package for events
aiohttp = {version = "~3.11.18", optional = true}

# optional pyATS package
# (this pulls in a lot more dependencies)
# it does not pull in genie, need to specify extras=["full"] for pyATS.
pyats = {version = "^25", optional = true}

# optional packages for documentation build
sphinx_rtd_theme = {version="^3", optional = true}
# version 8 is available but requires python>=3.10
sphinx =  {version="^7", optional = true}

[tool.poetry.group.dev.dependencies]
flake8 = "^7"
poetry-plugin-export = "*"
pre-commit = "^4"
pytest = "*"
respx = "^0.22.0"

[tool.poetry.extras]
events = ["aiohttp"]
pyats = ["pyats"]
docs = ["sphinx", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
